--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": ">=5.5.9",
         "php-curl-class/php-curl-class": "^7.3",
         "ext-curl": "*",
+        "mcustiel/php-simple-di": ">=1.2.0",
         "psr/log": "~1.0"
     },
     "require-dev": {
